--- a/src/main/resources/assets/elden_horses/lang/en_us.json
+++ b/src/main/resources/assets/elden_horses/lang/en_us.json
@@ -1,4 +1,5 @@
 {
 	"eldenhorses.category": "Elden Horses",
-	"key.eldenhorses.summonhorse": "Summon Horse"
+	"key.eldenhorses.summonhorse": "Summon Horse",
+	"item.elden_horses.netherite_horse_armor": "Netherite Horse Armor"
 }
